--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -7,6 +7,7 @@
 }
 
 .header {
+  width: 65%;
   padding-bottom: 64px;
 }
 
@@ -24,7 +25,13 @@
 }
 
 .characterWrapper {
+  width: min(35%, 358px);
+  min-height: 500px;
+  position: fixed;
+  top: 128px;
+  right: max(calc(50% - 512px), 0px);
 }
 
 .controlColumn {
+  width: 50%;
 }
