--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -35,3 +35,15 @@
 .controlColumn {
   width: 50%;
 }
+
+.decorationBar {
+  position: fixed;
+  bottom: 0;
+  background-color: hsl(195deg, 20%, 86%);
+  height: 40vh;
+  width: 100vw;
+}
+
+.isolation {
+  isolation: isolate;
+}
